# SignalStore

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
notebooks/: demo.ipynb
signalstore/: __init__.py
signalstore/adapters/read_adapters/: abstract_read_adapter.py
signalstore/adapters/read_adapters/domain_modeling/: schema_read_adapter.py  vocabulary_read_adapter.py
signalstore/adapters/read_adapters/handmade_records/: excel_study_organizer_read_adapter.py
signalstore/adapters/read_adapters/recording_acquisitions/axona/: axona_read_adapter.py
signalstore/adapters/read_adapters/recording_acquisitions/intan/: ReadIntanSpikeFile.py  intan_read_adapter.py
signalstore/adapters/read_adapters/recording_acquisitions/intan/load_intan_rhd_format/: load_intan_rhd_format.py  readme.txt
signalstore/adapters/read_adapters/recording_acquisitions/intan/load_intan_rhs_format/: load_intan_rhs_format.py  readme.txt
signalstore/adapters/read_adapters/recording_acquisitions/neurodata_without_borders/: neurodata_without_borders_read_adapter.py
signalstore/operations/: __init__.py  handler_executor.py  handler_factory.py
signalstore/operations/handlers/: base_handler.py
signalstore/operations/handlers/domain/: property_model_handlers.py  schema_handlers.py
signalstore/operations/helpers/: abstract_helper.py  neuroscikit_extractor.py  neuroscikit_rawio.py  spikeinterface_helper.py
signalstore/operations/helpers/wrappers/: neo_wrappers.py  nwb_wrappers.py
signalstore/store/: __init__.py  data_access_objects.py  datafile_adapters.py  repositories.py  unit_of_work.py  unit_of_work_povider.py  unit_of_work_provider.py
signalstore/utilities/data_adapters/spike_interface_adapters/: si_sorter.py
signalstore/utilities/testing/: data_mocks.py
signalstore/utilities/tools/: dataarrays.py  mongo_records.py  operation_response.py  purge_orchestration_response.py  quantities.py  strings.py  time.py
src/adapters/read_adapters/domain_modeling/: schema_read_adapter.py  vocabulary_read_adapter.py
src/adapters/read_adapters/handmade_records/: excel_study_organizer_read_adapter.py
src/adapters/read_adapters/recording_acquisitions/axona/: axona_read_adapter.py
src/adapters/read_adapters/recording_acquisitions/intan/: ReadIntanSpikeFile.py  intan_read_adapter.py
src/adapters/read_adapters/recording_acquisitions/neurodata_without_borders/: neurodata_without_borders_read_adapter.py
src/store/: __init__.py  data_access_objects.py  repositories.py  store_errors.py  unit_of_work.py  unit_of_work_povider.py
src/utilities/data_adapters/spike_interface_adapters/: si_recording.py
src/utilities/testing/: data_mocks.py  handler_factory_mock.py  handler_mocks.py  helper_mocks.py
src/utilities/tools/: mongo_records.py  operation_response.py  purge_orchestration_response.py  time.py
tests/: conftest.py
tests/data/invalid_data/: records.json
tests/data/invalid_data/models/: property_models.json
tests/data/invalid_data/models/data_models/: invalid_schema_type.json  missing_metamodel_ref.json  nonexistent_metamodel_ref.json
tests/data/valid_data/: records.json
tests/data/valid_data/data_arrays/: make_fake_data.py  spike_labels__test.nc  spike_times__test.nc  spike_waveforms__test.nc  test__test.nc
tests/data/valid_data/models/: property_models.json  schemata.json
tests/data/valid_data/models/data_models/: animal_model.json  animal_position_model.json  arena_model.json  brain_implant_recording_model.json  clustering_procedure_model.json  numpy_test.json  probe_model.json  session_model.json  spike_features_model.json  spike_labels.json  spike_times_model.json  spike_waveforms_model.json  study_model.json  test.json
tests/data/valid_data/models/metamodels/: record_metamodel.json  test_metamodel.json  xarray_dataarray_metamodel.json
tests/integration/: conftest.py  test_app_container.py  test_spikeinterface_extraction.py
tests/unit/: test_ci_cd.py
tests/unit/operations/handlers/domain/: test_schema_handlers.py
tests/unit/store/: test_data_access_objects.py  test_repositories.py  test_unit_of_work.py
(+8 files in other folders)
