[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "signalstore"
version = "0.0.1"
dependencies = [
    "dependency_injector", # for dependency injection
    "jsonschema", # for validating data schemata
    "numpy", # for in memory data arrays
    "xarray", # for using data, datasets and metadata (universal internal data format)
    "fsspec", # for loading data from remote sources and local files (abstract filesystem interface)
    "universal_pathlib", # for working with paths in a platform independent way
    "gcsfs", # for loading data from google cloud storage with fsspec
    "dask", # for parallelizing data processing and analysis
    "scipy", # for reading and writing NetCDF files among other things
    "zarr", # for reading and writing zarr files directly
    "openpyxl", # for reading excel project organzier files that store metadata
    "pydantic"
]

authors = [
    {name = "Oliver Shetler (principal architect, primary maintainer)", email = "cos2112@cumc.columbia.edu"},
    {name = "David Vaughan (developer)"},
    {name = "Andrew Aoun (notebook contributor)"},
    {name = "Abid Hussaini (lab Principal Investigator)"},
]

[tool.optional-dependencies]
dev = [
    "pytest",
    "mongomock",
]

[tool.setuptools.packages.find]
exclude = ["data", "docs", "notebooks", "tests", "gui", "build", "*.egg-info", ".pytest_cache", ".githooks"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"').",
    "serial",
    "smoke: marks tests as minimal smoke tests meant for quick use during development."
]
